# inrflow-mirror

./: .gitignore  README.md  contributors.txt
code/main/: CMakeLists.txt  Makefile  Makefile.unix  Makefile.windows  inrflow.conf  inrflow_conf_script.sh  inrflow_sanity_check.sh  pretty_data.tex  stats_only.tex  workload
code/main/output/: collate_dat_files.sh  key_sort_dat_file.sh
code/main/output/the_histogram_room/: convert_some_hists.sh  extract_hist.sh  histogram-tools.py
code/main/src/bcube/: bcube.c  bcube.h
code/main/src/dpillar/: dpillar.c  dpillar.h
code/main/src/fattree/: fattree.c  fattree.h
code/main/src/ficonn/: ficonn.c  ficonn.h  routelist.c
code/main/src/gdcficonn/: gdcficonn.c  gdcficonn.h
code/main/src/hcnbcn/: hcnbcn.c  hcnbcn.h
code/main/src/inrflow/: allocation.c  allocation.h  applications.c  applications.h  dynamic_engine.c  dynamic_engine.h  gen_trace.c  gen_trace.h  get_conf.c  globals.h  io.c  io.h  list.c  literal.c  literal.h  main.c  metrics.c  metrics.h  misc.h  node.h  path_list.c  path_list.h  placement.c  placement.h  reporting.c  reporting.h  scheduling.c  scheduling.h  static_engine.c  topo.h  traffic.c  traffic.h
code/main/src/jellyfish/: allocation_jellyfish.c  allocation_jellyfish.h  jellyfish.c  jellyfish.h  jellyfish_aux.c  jellyfish_aux.h  rg_gen.c  rg_gen.h  routing_jellyfish.c  routing_jellyfish.h
code/main/src/kernels/: collectives.c  trace.c  (+2 more)
code/main/test/: README.md  gen_args.sh  gen_gdcficonn_many_alltoall.sage  gen_test_args.sh  gnu_parallel_test.sh  inrflow.conf  parallel_test.sh  serial_test.sh
(+45 files in other folders)
